
syntax = "proto2";
package fubble;

option java_package = "com.freckles.of.couple.fubble.proto";
option java_outer_classname = "WebContainer";

// SERVER

message MessageContainerServer {
	oneof messageType {
		// room handling
		JoinRoom join_room = 1;
		RenameUser rename_user = 2;
		
		// chat
		ChatMessage chat_message = 3;
	}
}


message JoinRoom {
	optional string room_name = 1;
}

message RenameRoom {
	optional string room_name = 1;
}

message RenameUser {
	optional string new_name = 1;
}

message ChatMessage {
	optional string content = 1;
}


// CLIENT

message MessageContainerClient {
	oneof messageType {
		UserJoined user_joined = 1;
		UserLeft user_left = 2;
		JoinedRoom joined_room = 3;
		Error error = 4;
		RenamedUser renamed_user = 5;
		
		// chat
		ChatMessageClient chat_message = 6;
	}
}

message UserJoined {
	optional string user_name = 1;
	optional string user_id = 2;
}

message UserLeft {
	optional string user_id = 1;
}

message JoinedRoom {
	optional string room_id = 1;
	optional string user_id = 2;
	optional string user_name = 3;
}

message Error {
	optional string error_id = 1;
	optional string description = 2;
}

message RenamedUser {
	optional string user_id = 1;
	optional string new_name = 2;
}

message ChatMessageClient {
	optional string content = 1;
	optional string user_id = 2;
}







